--- a/attachments/style/common.css
+++ b/attachments/style/common.css
@@ -13,3 +13,8 @@
 .infopanel .top{text-align: left;height:37px;background-image:url('images/infopanel-bg.png');background-repeat:repeat-x;border-bottom:1px solid #E1EEEC;padding:16px;}
 .infopanel .bottom{padding:10px 16px;}
 .infopanel p{font-family:"Geneva";font-size:11px;line-height:12px;padding-bottom:10px;color:#252525;}
+
+.hidden {
+  display: none !important;
+  visibility: hidden !important;
+}
