--- a/attachments/style/data-explorer.css
+++ b/attachments/style/data-explorer.css
@@ -1,3 +1,4 @@
+.header { margin: 5px 0; }
 .data-explorer .header .navigation,
 .data-explorer .header .navigation li,
 .data-explorer .header .pagination,
@@ -79,7 +80,6 @@
 
 .data-table-container {
   overflow: auto;
-  height: 550px;
 }
 
 .data-table {
@@ -504,7 +504,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   border-top: 1px solid #E1EEEC;
   overflow: auto;
   position: absolute;
-  top: 73px;
+  top: 37px;
   bottom: 0px;
   left: 5px;
   right: 0px;
